overflow fix

--- a/resources/styles/components/learning-guide.less
+++ b/resources/styles/components/learning-guide.less
@@ -1,5 +1,7 @@
 .learning-guide {
   min-width: 380px;
+  background: none;
+  box-shadow: none;
   .guide-container {
     min-width: 340px;
   }
@@ -8,33 +10,44 @@
     float: left;
     margin: 9px 9px 9px 9px;
   }
+  .guide-heading {
+    height: 80px;
+    .header-button {
+      float: right;
+      margin-top: -5px;
+      font-size: 1.4rem !important;
+    }
+  }
   .guide-group-title {
-    font-size: 2rem;
+    font-size: 3rem;
     display: inline-block;
   }
-  .guide-key {
-    width: 100%;
-    height: 40px;
-    .item {
-      float: left;
-      margin: 0px 35px 0px 0px;
-      .box {
+  .guide-footer {
+    clear: both;
+    .guide-key {
+      width: 100%;
+      height: 40px;
+      .item {
         float: left;
-        width: 10px;
-        height: 10px;
-        margin: 10px 5px 0px 0px;
-        &.high {
-          background: @tutor-secondary;
+        margin: 0px 35px 0px 0px;
+        .box {
+          float: left;
+          width: 10px;
+          height: 10px;
+          margin: 10px 5px 0px 0px;
+          &.high {
+            background: @tutor-secondary;
+          }
+          &.medium {
+            background: @tutor-quaternary;
+          }
+          &.low {
+            background: @tutor-primary;
+          }
         }
-        &.medium {
-          background: @tutor-quaternary;
-        }
-        &.low {
-          background: @tutor-primary;
-        }
-      }
-      .title {
+        .title {
 
+        }
       }
     }
   }
@@ -43,8 +56,9 @@
       margin-right: 0px;  
     }
     .chapter-panel {
+      background: @tutor-white;
       float: left;
-      margin: 0px 8px 20px 13px;
+      margin: 0px 0px 20px 0px;
       padding: 10px 11px 11px 9px;
       border: 1px solid @tutor-neutral-light;
       width: 265px;
@@ -66,6 +80,9 @@
         margin-bottom: 5px;
         padding-bottom: 35px;
         border-bottom: 1px dashed @tutor-neutral-light;
+        &.metric {
+          padding-bottom: 5px;
+        }
       }
       .chapter-number {
         margin-right: 5px;
